[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-proto"
version = "0.11.5"
edition = "2018"
rust-version = "1.75"

homepage = "https://github.com/rust-netlink/netlink-proto"
keywords = ["netlink", "linux", "async"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-netlink/netlink-proto"
description = "async netlink protocol"

[dependencies]
bytes = "1.0"
log = "0.4.8"
futures = "0.3"
netlink-packet-core = "0.7.0"
netlink-sys = { default-features = false, version = "0.8.4" }
thiserror = "2"

[features]
default = ["tokio_socket"]
tokio_socket = ["netlink-sys/tokio_socket"]
smol_socket = ["netlink-sys/smol_socket"]

[dev-dependencies]
env_logger = "0.8.2"
tokio = { version = "1.0.1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
netlink-packet-route = { version = "0.18.1" }
netlink-packet-audit = { version = "0.5.0" }
async-std = {version = "1.9.0", features = ["attributes"]}

[[example]]
name = "dump_links"

[[example]]
name = "dump_links_async"
required-features = ["tokio_socket"]

[[example]]
name = "audit_netlink_events"
